--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -51,8 +51,8 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp">
+        app:layout_collapseMode="pin"
+        app:tabGravity="center">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
