--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -36,7 +36,7 @@
                     android:layout_width="17dp"
                     android:layout_height="17dp"
                     android:background="@drawable/shape_circle_green"
-                    android:gravity="center_horizontal|center_vertical"
+                    android:gravity="center"
                     android:text="1"
                     android:textColor="#ffffff"
                     android:textSize="13sp" />
